--- a/modules/components/CMakeLists.txt
+++ b/modules/components/CMakeLists.txt
@@ -4,6 +4,6 @@ add_subdirectory(ethercat_component)
 add_subdirectory(exception_component)
 add_subdirectory(robot_component)
 add_subdirectory(trajectory_component)
-add_subdirectory(grpc_service_component)
+# add_subdirectory(grpc_service_component)
 add_subdirectory(robot_service_component)
 add_subdirectory(interlock_component)
