--- a/modules/components/test_com/test/CMakeLists.txt
+++ b/modules/components/test_com/test/CMakeLists.txt
@@ -19,7 +19,7 @@ include( ${OROCOS-RTT_USE_FILE_PATH}/UseOROCOS-RTT.cmake )
 
 aux_source_directory(./ TEST_DIR_SRCS)
 
-add_executable(${TEST_BINARY} ${TEST_DIR_SRCS})
+orocos_executable(${TEST_BINARY} ${TEST_DIR_SRCS})
 add_test(NAME ${TEST_BINARY} COMMAND ${TEST_BINARY})
 target_include_directories(${MODULE_NAME} PUBLIC
                           ${PROJECT_SOURCE_DIR}/modules/core/include
