--- a/modules/robot_ctl/test/CMakeLists.txt
+++ b/modules/robot_ctl/test/CMakeLists.txt
@@ -5,7 +5,7 @@ include_directories("../include")
 set(TEST_BINARY ${ROBOT_CTL_EXE}_unittest)
 
 aux_source_directory(./ TEST_DIR_SRCS)
-add_executable(${TEST_BINARY} ${TEST_DIR_SRCS})
+orocos_executable(${TEST_BINARY} ${TEST_DIR_SRCS})
 add_test(NAME ${TEST_BINARY} COMMAND ${TEST_BINARY})
 
 target_link_libraries(${TEST_BINARY} PUBLIC glog::glog gtest)
