--- a/modules/robot_interpolation/test/CMakeLists.txt
+++ b/modules/robot_interpolation/test/CMakeLists.txt
@@ -22,10 +22,10 @@ if(NOT TARGET Boost::filesystem)
 endif()
 
 aux_source_directory(./ TEST_DIR_SRCS)
-add_executable(${TEST_BINARY} ${TEST_DIR_SRCS})
+orocos_executable(${TEST_BINARY} ${TEST_DIR_SRCS})
 add_test(NAME ${TEST_BINARY} COMMAND ${TEST_BINARY})
 
-target_link_libraries(${TEST_BINARY} PUBLIC ${MODULE_NAME} gtest orocos-kdl yaml-cpp robot_interpolation)
-target_link_libraries(${TEST_BINARY} PUBLIC Eigen3::Eigen)
-target_link_libraries(${TEST_BINARY} PUBLIC glog::glog)
-target_link_libraries(${TEST_BINARY} PUBLIC Boost::filesystem)
+target_link_libraries(${TEST_BINARY} ${MODULE_NAME} gtest orocos-kdl yaml-cpp robot_interpolation)
+target_link_libraries(${TEST_BINARY} Eigen3::Eigen)
+target_link_libraries(${TEST_BINARY} glog::glog)
+target_link_libraries(${TEST_BINARY} Boost::filesystem)
