--- a/modules/robot_planning/test/CMakeLists.txt
+++ b/modules/robot_planning/test/CMakeLists.txt
@@ -25,7 +25,7 @@ aux_source_directory(./ TEST_DIR_SRCS)
 add_executable(${TEST_BINARY} ${TEST_DIR_SRCS})
 add_test(NAME ${TEST_BINARY} COMMAND ${TEST_BINARY})
 
-target_link_libraries(${TEST_BINARY} PUBLIC ${MODULE_NAME} gtest orocos-kdl yaml-cpp)
-target_link_libraries(${TEST_BINARY} PUBLIC Eigen3::Eigen)
-target_link_libraries(${TEST_BINARY} PUBLIC glog::glog)
-target_link_libraries(${TEST_BINARY} PUBLIC Boost::filesystem)
+target_link_libraries(${TEST_BINARY} ${MODULE_NAME} gtest orocos-kdl yaml-cpp)
+target_link_libraries(${TEST_BINARY} Eigen3::Eigen)
+target_link_libraries(${TEST_BINARY} glog::glog)
+target_link_libraries(${TEST_BINARY} Boost::filesystem)
