--- a/modules/robot_server/test/CMakeLists.txt
+++ b/modules/robot_server/test/CMakeLists.txt
@@ -5,8 +5,8 @@ include_directories("../include")
 set(TEST_BINARY ${ROBOT_SERVER_EXE}_unittest)
 
 aux_source_directory(./ TEST_DIR_SRCS)
-add_executable(${TEST_BINARY} ${TEST_DIR_SRCS})
+orocos_executable(${TEST_BINARY} ${TEST_DIR_SRCS})
 add_test(NAME ${TEST_BINARY} COMMAND ${TEST_BINARY})
 
-target_link_libraries(${TEST_BINARY} PUBLIC glog::glog gtest)
+target_link_libraries(${TEST_BINARY} glog::glog gtest)
 
